# sudoku-solver

./: Cargo.toml  README.md
Solve/: Cargo.toml
Solve/src/sequential/: algorithm_x.rs
solve/: Cargo.toml
solve/src/: lib.rs
solve/src/sequential/: algorithm_x.rs
solve/tests/: test_algorithm_x.rs
src/: algorithm_x_common.rs  lib.rs  sudoku.rs
src/parallel/: algorithm_x_par.rs  mod.rs
src/sequential/: algorithm_x.rs  mod.rs
tests/: algorithm_x_benchmark.rs  test.rs  test_algorithm_x.rs  test_parallel_algorithm_x.rs  test_sequential_algorithm_x.rs
