[package]
name = "solve" 
version = "0.1.0"
edition = "2021"

[lib]
name = "solve"
path = "src/lib.rs" 

[[test]]
name = "parallel_algorithm_x_tests"
path = "tests/test_parallel_algorithm_x.rs"

[[test]]
name = "sequential_algorithm_x_tests"
path = "tests/test_sequential_algorithm_x.rs"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[dependencies]
rayon = "1.5"
